--- a/Assignments/Lab6/Lab_6/pom.xml
+++ b/Assignments/Lab6/Lab_6/pom.xml
@@ -33,8 +33,19 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
           </dependency>
- 
-   
+
+	 <dependency>
+		 <groupId>org.springframework</groupId>
+		 <artifactId>spring-aop</artifactId>
+	 </dependency>
+	 <dependency>
+		 <groupId>org.aspectj</groupId>
+		 <artifactId>aspectjrt</artifactId>
+	 </dependency>
+	 <dependency>
+		 <groupId>org.aspectj</groupId>
+		 <artifactId>aspectjweaver</artifactId>
+	 </dependency>
   
   
  <!--  
